<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoyalMaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="comenzar_encuesta">Presione la pantalla para comenzar la encuesta</string>
    <string name="semaforo_description">Semaforo</string>
    <string name="title_activity_preguntas">PreguntasActivity</string>
    <string name="cerrar_preguntas_esta_seguro">¿Está seguro que desea cancelar la encuesta?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="title_activity_fin">FinActivity</string>
    <string name="title_activity_inhabilitar">InhablitarActivity</string>
    <string name="title_activity_validacion">ValidacionActivity</string>
    <string name="title_activity_semaforo">SemaforoActivity</string>
    <string name="terminar_encuesta">Gracias por completar la encuesta.</string>
    <string name="force_sync">Forzar Sincronización</string>
    <string name="title_activity_login">Ingrese su dispositivo de LoyalMaker.com</string>
    <string name="device">Dispositivo</string>
    <string name="mensaje_login">Ingrese el nombre de dispositivo que definió en LoyalMaker.com</string>
    <string name="boton_login">Validar</string>
    <string name="login_edit_error">Debe ingresar un nombre de dispositivo</string>
    <string name="login_invalid_device">Dispositivo inválido</string>
    <string name="title_activity_sincro">Estado de Sincronización</string>
    <string name="sincronizando">Sincronizando</string>
    <string name="por_favor_espere">Por favor espere&#8230;</string>
    <string name="sincro_titulo">Sincronizando datos con LoyalMaker.com</string>
    <string name="sincro_manual">Forzando la sincronización de datos&#8230;</string>
    <string name="sincro_manual_fin">Se terminó la sincronización de datos</string>
    <string name="loyalmaker_logo">Logo LoyalMaker.com</string>
    <string name="comenzar">Comenzar</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_terminar">Terminar</string>
    <string name="boton_inhabilitar">Comenzar</string>
    <string name="inhabilitar_encuesta">La encuesta esta inahabilitada. Espere unos minutos.</string>
    <string name="form_nombre">Nombre y Apellido</string>
    <string name="form_email">Email</string>
    <string name="form_telefono">Teléfono</string>
    <string name="form_terminar">Terminar</string>
    <string name="nada_seleccionado">Por favor seleccione una opción</string>
    <string name="contrasena_ingresar">Ingrese Contraseña</string>
    <string name="contrasena_incorrecta">Contraseña Incorrecta</string>
    <string name="salir">Salir</string>
    <string name="seleccione_launcher">Seleccione un Launcher</string>
    <string name="form_comentarios">Comentarios</string>
    <string name="reiniciar_encuesta">Tiempo de espera agotado; reiniciando encuesta.</string>
    
</resources>
