<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewInabilitar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/inhabilitar_encuesta"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="-10dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/loyalmaker_logo"
        android:scaleType="centerInside"
        android:src="@drawable/logo_loyalmaker" />

    <ImageView
        android:id="@+id/imageViewEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:scaleType="centerInside"
        tools:ignore="ContentDescription" />

   <ImageView
        android:id="@+id/imageViewComenzar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-20dp"
        android:clickable="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/comenzar"
        android:paddingTop="20dp"
        android:onClick="habilitar"
        android:src="@drawable/boton_comenzar" />

</RelativeLayout>