<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".MainActivity"
    tools:ignore="NestedWeights" >

    <ImageView
        android:id="@+id/imageViewComenzar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/comenzar"
        android:paddingTop="20dp"
        android:src="@drawable/boton_comenzar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewBienvenida"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/comenzar_encuesta"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <ImageView
                    android:id="@+id/imageViewEmpresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" >

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/loyalmaker_logo"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo_loyalmaker" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
